--- a/index.html
+++ b/index.html
@@ -18,204 +18,216 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigation">
-        <a href="./index.html" class="heder-logo"
-          >Web<span class="heder-logo-studio">Studio</span>
-        </a>
-        <ul class="heder-menu-list">
-          <li class="heder-menu-item">
-            <a href="./index.html" class="heder-menu-link">Studio</a>
-          </li>
-          <li class="heder-menu-item">
-            <a href="" class="heder-menu-link">Portfolio</a>
-          </li>
-          <li class="heder-menu-item">
-            <a href="" class="heder-menu-link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="header-navigation-address">
-        <ul class="header-navigation-list">
-          <li class="header-navigation-item">
-            <a class="header-navigation-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com
-            </a>
-          </li>
-          <li class="header-navigation-item">
-            <a class="header-navigation-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11
-            </a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="header-navigation">
+          <a href="./index.html" class="heder-logo"
+            >Web<span class="heder-logo-studio">Studio</span>
+          </a>
+          <ul class="heder-menu-list">
+            <li class="heder-menu-item">
+              <a href="./index.html" class="heder-menu-link">Studio</a>
+            </li>
+            <li class="heder-menu-item">
+              <a href="" class="heder-menu-link">Portfolio</a>
+            </li>
+            <li class="heder-menu-item">
+              <a href="" class="heder-menu-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-navigation-address">
+          <ul class="header-navigation-list">
+            <li class="header-navigation-item">
+              <a class="header-navigation-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com
+              </a>
+            </li>
+            <li class="header-navigation-item">
+              <a class="header-navigation-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero-section">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">Order Service</button>
+        </div>
       </section>
       <section class="section-possibilities">
-        <h2 class="visually-hidden">List of possibilities</h2>
-        <ul class="list-of-possibilities">
-          <li class="possibilities-item">
-            <h3 class="possibilities-subtitle">Strategy</h3>
-            <p class="possibilities-item-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="possibilities-item">
-            <h3 class="possibilities-subtitle">Punctuality</h3>
-            <p class="possibilities-item-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="possibilities-item">
-            <h3 class="possibilities-subtitle">Diligence</h3>
-            <p class="possibilities-item-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="possibilities-item">
-            <h3 class="possibilities-subtitle">Technologies</h3>
-            <p class="possibilities-item-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">List of possibilities</h2>
+          <ul class="list-of-possibilities">
+            <li class="possibilities-item">
+              <h3 class="possibilities-subtitle">Strategy</h3>
+              <p class="possibilities-item-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="possibilities-item">
+              <h3 class="possibilities-subtitle">Punctuality</h3>
+              <p class="possibilities-item-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="possibilities-item">
+              <h3 class="possibilities-subtitle">Diligence</h3>
+              <p class="possibilities-item-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="possibilities-item">
+              <h3 class="possibilities-subtitle">Technologies</h3>
+              <p class="possibilities-item-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section-team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/mark-guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name-member">Mark Guerrero</h3>
-            <p class="team-function">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/tom-ford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name-member">Tom Ford</h3>
-            <p class="team-function">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/camila-garcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name-member">Camila Garcia</h3>
-            <p class="team-function">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/daniel-wilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name-member">Daniel Wilson</h3>
-            <p class="team-function">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/mark-guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name-member">Mark Guerrero</h3>
+              <p class="team-function">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/tom-ford.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name-member">Tom Ford</h3>
+              <p class="team-function">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/camila-garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name-member">Camila Garcia</h3>
+              <p class="team-function">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/daniel-wilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name-member">Daniel Wilson</h3>
+              <p class="team-function">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section-portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/banking-app.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-services">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-services">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/meditation-app.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-services">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/taxi-service.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-services">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-services">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-services">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/banking-app.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-services">Banking App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-services">Cashless Payment</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-services">Meditation App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-services">Taxi Service</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-services">Screen Illustrations</h3>
+              <p class="portfolio-text">Design</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-services">Online Courses</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="section-footer">
-      <a class="footer-logo-link" href="./index.html"
-        >Web<span class="footer-logo-studio">Studio</span>
-      </a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo-link" href="./index.html"
+          >Web<span class="footer-logo-studio">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
