--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-navigation">
           <a href="./index.html" class="heder-logo"
             >Web<span class="heder-logo-studio">Studio</span>
@@ -53,13 +53,15 @@
     </header>
     <main>
       <section class="hero-section">
-        <div class="container">
+        <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-button" type="button">Order Service</button>
+          <div class="container-hero-btn">
+            <button class="hero-button" type="button">Order Service</button>
+          </div>
         </div>
       </section>
       <section class="section-possibilities">
-        <div class="container">
+        <div class="container possibilities-container">
           <h2 class="visually-hidden">List of possibilities</h2>
           <ul class="list-of-possibilities">
             <li class="possibilities-item">
@@ -94,7 +96,7 @@
         </div>
       </section>
       <section class="section-team">
-        <div class="container">
+        <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
@@ -145,7 +147,7 @@
         </div>
       </section>
       <section class="section-portfolio">
-        <div class="container">
+        <div class="container portfolio-container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
@@ -156,8 +158,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-services">Banking App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="box-portfolio-item">
+                <h3 class="portfolio-services">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -167,8 +171,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-services">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="box-portfolio-item">
+                <h3 class="portfolio-services">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -178,8 +184,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-services">Meditation App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="box-portfolio-item">
+                <h3 class="portfolio-services">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -189,8 +197,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-services">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="box-portfolio-item">
+                <h3 class="portfolio-services">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -200,8 +210,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-services">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
+              <div class="box-portfolio-item">
+                <h3 class="portfolio-services">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -211,15 +223,17 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-services">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="box-portfolio-item">
+                <h3 class="portfolio-services">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="section-footer">
-      <div class="container">
+      <div class="container footer-container">
         <a class="footer-logo-link" href="./index.html"
           >Web<span class="footer-logo-studio">Studio</span>
         </a>
