--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
       </section>
       <section class="section-possibilities">
-        <div class="container possibilities-container">
+        <div class="container">
           <h2 class="visually-hidden">List of possibilities</h2>
           <ul class="list-of-possibilities">
             <li class="possibilities-item">
@@ -94,7 +94,7 @@
         </div>
       </section>
       <section class="section-team">
-        <div class="container team-container">
+        <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
@@ -105,8 +105,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name-member">Mark Guerrero</h3>
-              <p class="team-function">Product Designer</p>
+              <div class="team-container">
+                <h3 class="team-name-member">Mark Guerrero</h3>
+                <p class="team-function">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -116,8 +118,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name-member">Tom Ford</h3>
-              <p class="team-function">Frontend Developer</p>
+              <div class="team-container">
+                <h3 class="team-name-member">Tom Ford</h3>
+                <p class="team-function">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -127,8 +131,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name-member">Camila Garcia</h3>
-              <p class="team-function">Marketing</p>
+              <div class="team-container">
+                <h3 class="team-name-member">Camila Garcia</h3>
+                <p class="team-function">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -138,8 +144,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name-member">Daniel Wilson</h3>
-              <p class="team-function">UI Designer</p>
+              <div class="team-container">
+                <h3 class="team-name-member">Daniel Wilson</h3>
+                <p class="team-function">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -231,7 +239,7 @@
       </section>
     </main>
     <footer class="section-footer">
-      <div class="container footer-container">
+      <div class="container">
         <a class="footer-logo-link" href="./index.html"
           >Web<span class="footer-logo-studio">Studio</span>
         </a>
