--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header-container">
+      <div class="container">
         <nav class="header-navigation">
           <a href="./index.html" class="heder-logo"
             >Web<span class="heder-logo-studio">Studio</span>
@@ -53,7 +53,7 @@
     </header>
     <main>
       <section class="hero-section">
-        <div class="container hero-container">
+        <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
         </div>
@@ -153,7 +153,7 @@
         </div>
       </section>
       <section class="section-portfolio">
-        <div class="container portfolio-container">
+        <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
