--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-navigation">
           <a href="./index.html" class="heder-logo"
             >Web<span class="heder-logo-studio">Studio</span>
@@ -59,8 +59,8 @@
         </div>
       </section>
       <section class="section-possibilities">
-        <h2 class="visually-hidden">List of possibilities</h2>
         <div class="container">
+          <h2 class="visually-hidden">List of possibilities</h2>
           <ul class="list-of-possibilities">
             <li class="possibilities-item">
               <h3 class="possibilities-subtitle">Strategy</h3>
