--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <style>
+      .visually-hidden {
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
+      }
+    </style>
   </head>
   <body>
     <header class="header">
