--- a/index.html
+++ b/index.html
@@ -108,6 +108,36 @@
               <div class="team-container">
                 <h3 class="team-name-member">Mark Guerrero</h3>
                 <p class="team-function">Product Designer</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -121,6 +151,36 @@
               <div class="team-container">
                 <h3 class="team-name-member">Tom Ford</h3>
                 <p class="team-function">Frontend Developer</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a class="icon-link">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -134,6 +194,36 @@
               <div class="team-container">
                 <h3 class="team-name-member">Camila Garcia</h3>
                 <p class="team-function">Marketing</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -147,6 +237,36 @@
               <div class="team-container">
                 <h3 class="team-name-member">Daniel Wilson</h3>
                 <p class="team-function">UI Designer</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="icon-team" widch="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
